Revisions to Project 1

--- a/force-app/main/default/lwc/fAQSection/fAQSection.html
+++ b/force-app/main/default/lwc/fAQSection/fAQSection.html
@@ -11,7 +11,7 @@
     </h2>
     <p>
             General care directions for your pet can be found in the packet that came with your animal!
-        Things such as suggested diet, activities. how active they are, etc. should all be outlined in the informational packet.
+        Things such as suggested diet, activities, habits, etc. should all be outlined in the informational packet.
         If you still have any other questions feel free to ask our experts by submitting a ticket!
     </p>
 </template>
